<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/debug_message_edit" android:hint="@string/debug_enter_message"  android:text="@string/debug_sample_message" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/debug_morse_on_mobile_button"  android:text="@string/debug_morse_on_mobile_button"   />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:id="@+id/debug_morse_cancel" android:text="@string/debug_cancel_morse" />


</LinearLayout>
